# autonoma

./: .gitignore  BACKLOG.md  CLAUDE.md  COMPLETED_TASKS.md  LAST_SESSION.md  Makefile  PRD.md  README.md  TODO.md  autonoma-memorai-integration.md  install.sh  package.json  pyproject.toml  tsconfig.json
autonoma/: __init__.py  cli.py
autonoma/agents/: __init__.py  base.py  ceo.py  developer.py  qa.py  staff_engineer.py
autonoma/core/: __init__.py  config.py  orchestrator.py  state.py  wrapper.py
autonoma/desktop/: __init__.py  server.py
autonoma/tui/: __init__.py  app.py  dashboard.py
desktop/: electrobun.config.ts  package.json
desktop/public/: index.html
desktop/src/: main.ts  preload.ts
docs/: CLAUDE_CODE_SUPERVISOR.md  HOW_TO_USE.md
examples/: simple-api.md
src/: context-monitor.ts  handoff.ts  indefinite.ts  index.ts  observation-store.ts  orchestrator.ts  queue.ts  session.ts  types.ts  watchdog.ts
src/db/: schema.ts
src/human-queue/: index.ts  store.ts  types.ts
src/phases/: ceo-approval.ts  development.ts  index.ts  parsers.ts  planning.ts  prompt-builder.ts  prompts.ts  recitation.ts  review.ts  task-breakdown.ts  testing.ts  types.ts
src/protocol/: parser.ts
src/retry/: index.ts  types.ts
src/tui/: screen.ts  tiles.ts
src/types/: agent.ts  index.ts  memory.ts  protocol.ts  state.ts  task.ts
src/utils/: deque.ts  mutex.ts
src/verification/: detector.ts  index.ts  pipeline.ts  types.ts
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_integration.py  test_orchestrator.py  test_recovery.py  test_state.py
(+229 files in other folders)
