[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonoma"
version = "0.1.0"
description = "Autonomous agentic orchestration tool for software development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Autonoma Team" }
]
keywords = ["ai", "agent", "orchestration", "claude", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "anthropic>=0.40.0",
    "pexpect>=4.9.0",
    "textual>=0.89.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "aiofiles>=24.1.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
autonoma = "autonoma.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autonoma"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
